--- a/AukroBlocker/popup.html
+++ b/AukroBlocker/popup.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <h2>Blokátor prodejců</h2>
-        Verze 0.11 Alpha
+        Verze 0.12 Beta
         <hr>
-        <p>Seznam zablokovaných prodejců:</p>
+        <p>Seznam zablokovaných prodejců (<span id="blockedUsersCount">0</span>):</p>
         <select id="blockedUsersSelect"></select>
         <button id="removeBlockedUser">Odebrat</button>
         <hr>
