--- a/AukroBlocker/popup.html
+++ b/AukroBlocker/popup.html
@@ -12,19 +12,17 @@
     <hr>
     <p>Seznam zablokovaných prodejců (<span id="blockedUsersCount">0</span>):</p>
     <select id="blockedUsersSelect"></select>
-    <button id="removeBlockedUser">Odebrat</button>
+    <button id="removeBlockedUser">Odebrat prodejce</button>
     <hr>
-    <p>Pole pro přidání prodejce k blokování:</p>
     <input type="text" id="newBlockedUser" placeholder="Zadejte uživatelské jméno">
-    <button id="addBlockedUser">Přidat</button>
+    <button id="addBlockedUser">Přidat prodejce</button>
     <hr>
-    <p>Seznam zablokovaných regulárních výrazů:</p>
+    <p>Seznam zablokovaných výrazů:</p>
     <select id="blockedRegexSelect"></select>
-    <button id="removeBlockedRegex">Odebrat regulární výraz</button>
+    <button id="removeBlockedRegex">Odebrat výraz</button>
     <hr>
-    <p>Pole pro přidání regulárního výrazu:</p>
     <input type="text" id="newBlockedRegex" placeholder="Zadejte regulární výraz">
-    <button id="addBlockedRegex">Přidat regulární výraz</button>
+    <button id="addBlockedRegex">Přidat výraz</button>
     <hr>
     <label><input type="checkbox" id="blockSwitch" checked>Blokování zapnuto</label>
     <hr>
